# codex-process

./: PROCESS_INTEGRATION_PLAN.md  README.md
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/schema/json/: EventMsg.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/app-server/src/: codex_message_processor.rs  message_processor.rs  transport.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/: BUILD.bazel  config.schema.json
codex-rs/core/src/: codex.rs  codex_tests.rs  codex_tests_guardian.rs  guardian.rs  guardian_tests.rs  lib.rs  mcp_tool_call.rs  project_doc.rs
codex-rs/core/src/config/: config_tests.rs  mod.rs
codex-rs/core/src/context_manager/: updates.rs
codex-rs/core/src/plugins/: mod.rs
codex-rs/core/src/tasks/: mod.rs
codex-rs/protocol/src/: protocol.rs
codex-rs/tui/src/: chatwidget.rs  history_cell.rs
docs/: dashboard-mvp.md
process/: README.md  process.yaml
process-dashboard/: Cargo.toml  README.md
process-dashboard/migrations/: 202603090001_init.sql
process-dashboard/src/: lib.rs  main.rs
process-dashboard/tests/: api_smoke.rs
process/roles/: architect.md  builder.md  pr_responder.md
sdk/python/: README.md
sdk/python/docs/: api-reference.md  faq.md  getting-started.md
sdk/python/examples/: README.md  _bootstrap.py
sdk/python/notebooks/: sdk_walkthrough.ipynb
sdk/python/tests/: test_client_rpc_methods.py  test_public_api_signatures.py  test_real_app_server_integration.py
(+41 files in other folders)
