[package]
name = "process-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
